fixed overflow array bug and the overflow of the result

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 #calculator {
     width: 400px;
     height: 564px;
-    background-color: grey;
+    background-color:grey;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -22,9 +22,9 @@ body {
     justify-content: end;
     align-items: end;
     width: 356px;
-    height: 120px;
+    min-height: 120px;
     margin-bottom:15px ;
-    background-color: goldenrod;
+    background-color: aquamarine;
 }
 
 .clear-delete {
@@ -32,10 +32,23 @@ body {
     height:68px ;
 }
 
+#clear {
+    background-color:#00fd15;
+}
+
+#delete {
+    background-color: crimson;
+}
+
+.operators {
+    background-color: rgb(255, 176, 29);
+}
+
 button {
     width: 81.5px;
     height: 68px;
     margin: 3px;
+    cursor: pointer;
 }
 
 /* styling for dynamic elements*/
@@ -45,12 +58,14 @@ button {
 
 .below {
     font-size: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     margin-right: 5px;
 }
 
 .above {
-    font-size: 20px;
+    display: flex;
+    gap: 5px;
+    font-size: 22px;
     margin-bottom: 10px;
     margin-right: 5px;
 }
